change name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clientv2",
+  "name": "site",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://pauvre-charlie.github.io/poulpybot2",
