--- a/manifest.json
+++ b/manifest.json
@@ -5,11 +5,11 @@
     {
       "src": "favicon.png",
       "type": "image/png",
-      "sizes": "430x439"
+      "sizes": "439x439"
     }
   ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#FFEDA4"
 }
